--- a/project.ipynb
+++ b/project.ipynb
@@ -468,13 +468,13 @@
     "\n",
     "where $\\bar{x}$ is the sample mean, $\\Sigma$ is the summation notation, x<sub>i</sub>​ is the observed values of a sample and n is the the number of observations.\n",
     "\n",
-    "From the output, the mean for column sepal_length is 5.84 with the range between 4.30mm to 7.90mm. It is considered a sample mean, and not a population mean, because it is a measurement of a representative subset of a small number of the population (Ravikiran, 2021). \n",
+    "From the output, the mean for column sepal_length is **5.84mm** with the range between 4.30mm to 7.90mm. It is considered a sample mean, and not a population mean, because it is a measurement of a representative subset of a small number of the population (Ravikiran, 2021). \n",
     "\n",
-    "Because mean is vulnerable to the effect of outliers, it is used when the variable is not skewed, or when the data is nominal (Laerd Statistics, 2018). Mean values are used in various statistical formulas, including variance, standard deviation, and correlation. \n",
+    "Because outliers will distort the mean, it is used when the variable is not skewed, or when the data is nominal (Laerd Statistics, 2018). Mean values are used in various statistical formulas, including variance, standard deviation, and correlation. \n",
     "\n",
     "#### 2.2.1.3 Std (Standard Deviation)\n",
     "\n",
-    "According to Wikipedia Contributors (2019i), standard deviation is how far the data is spread around the mean, with low value indicating that data is concentrated close to the mean and high value indicating that data is spread out. The empirical rule 68–95–99.7 in a Normal distribution states that 68%, 95%, and 99.7% of the data falls within one, two and three standard deviation of the mean, respectively. The standard deviation for sepal_length is 0.83mm, suggesting that data is clustered close to the mean.\n",
+    "According to Wikipedia Contributors (2019j), standard deviation is how far the data is spread around the mean, with low value indicating that data is concentrated close to the mean and high value indicating that data is spread out. The empirical rule 68–95–99.7 in a Normal distribution states that 68%, 95%, and 99.7% of the data falls within one, two and three standard deviation of the mean, respectively. The standard deviation for sepal_length is 0.83mm, suggesting that data is clustered close to the mean.\n",
     "\n",
     "According to www.ncl.ac.uk (n.d.), the Sample Standard Deviation formula is:\n",
     "\n",
@@ -494,19 +494,25 @@
     "\n",
     "Quartiles divide the data into four equal parts. According to Wikipedia (2021), 25% of data lies below the first/lower quartile (Q<sub>1</sub>), 50% of data lies below the second quartile (Q<sub>2</sub>) and 75% of data lies below the the third/upper quartile (Q<sub>3</sub>). From a statistical standpoint, it indicates the spread of the data, presence of outliers and whether it is skewed or otherwise (Wikipedia, 2021). \n",
     "\n",
-    "The lower quartile for column sepal_length is 5.1mm. Because 25th percentile describes the spread of the lower portion of a dataset, this means that 25% of the data is below 5.1mm, while the rest of the data (the highest 75%) is above 5.1mm. If the lower quartile is farther from the median than the upper quartile, this indicates a negatively-skewed distribution or left-skewed, where the smaller values are more dispersed wit a longer tail and the larger values are more concentrated on the right (Taylor, 2022a, Turney, 2022). Also, if a data point falls significantly below this first quartile, it may be a potential outlier.\n",
+    "The lower quartile for column sepal_length is **5.1mm**. Because 25th percentile describes the spread of the lower portion of a dataset, this means that 25% of the data is below 5.1mm, while the rest of the data (the highest 75%) is above 5.1mm. If the lower quartile is farther from the median than the upper quartile, this indicates a negatively-skewed distribution or left-skewed, where the smaller values are more dispersed with a longer tail and the larger values are more concentrated on the right (Taylor, 2022a, Turney, 2022). Also, if a data point falls significantly below this first quartile, it may be a potential outlier.\n",
+    "\n",
+    "The distance between the lower quartile and the median is 0.7mm, which makes it higher than the distance between the upper quartile and the median (0.6mm), suggesting that it is negatively-skewed (left-skewed). \n",
     "\n",
     "#### 2.2.1.6 50% Quartile (median)\n",
     "\n",
-    "The median is the measure of tendency that divides a dataset into two equal parts when data is arranged from lowest to highest (Liberto, 2019). The median is used when the variable is ordinal or skewed (Laerd Statistics, 2018). As the difference between the median and mean increases, the more skewed the distribution becomes, and in such situation, the use of median is preferred (Laerd Statistics, 2018). According to LibreTexts Statistics (2019), a perfectly symmetrical distribution would have the same median and mean values, however, if the mean is less than median, the distribution is left-skewed and if the mean is more than the median, it is right-skewed. The median is also less sensitive to extreme values (outliers) than the mean (Australian Bureau of Statistics, 2023). \n",
+    "The median is the measure of tendency that splits a dataset into two equal parts (lower and upper) when data is arranged from lowest to highest (Liberto, 2019). The median is less sensitive to extreme values (outliers) than the mean (Australian Bureau of Statistics, 2023). \n",
     "\n",
-    "The median for column sepal_length is 5.8mm, while the mean is 5.84, thus indicating that the distribution is slightly skewed to the right (positively-skewed).\n",
+    "The median is used when the variable is ordinal or skewed (Laerd Statistics, 2018). As the difference between the median and mean increases, the more skewed the distribution becomes, and in such situation, the use of median is preferred (Laerd Statistics, 2018). \n",
+    "\n",
+    "According to LibreTexts Statistics (2019) and Wikipedia Contributors (2019i), a perfectly symmetrical distribution would have the same mean, median and mode values. The median for column sepal_length is **5.8mm**, which is smaller than the mean (5.84). According to Wikipedia Contributors (2019i), the relationship between mean and median is irrelevant to skewness, where both negative and positive skews can have its mean bigger or smaller than the median.\n",
     "\n",
     "#### 2.2.1.7 75% Quartile\n",
     "\n",
-    "The 75th percentile describes the spread of the upper portion of a dataset. The upper quartile for sepal_length is 6.4mm. Because the 75% Quartile separates the highest 25% of data from the lowest 75%, this means that 75% of the data is below 6.4mm, while the rest of the data (the highest 25%) is above 6.4mm. \n",
+    "The 75th percentile describes the spread of the upper portion of a dataset. The upper quartile for sepal_length is **6.4mm**. Because the 75% Quartile separates the highest 25% of data from the lowest 75%, this means that 75% of the data is below 6.4mm, while the rest of the data (the highest 25%) is above 6.4mm. \n",
     "\n",
     "If the upper quartile is farther from the median than the lower quartile, this indicates a positively-skewed distribution or right-skewed, where the bigger values are more dispersed with a longer tail and the smaller values are more clustered on the left (Taylor, 2022b, Turney, 2022). Also, if a data point reaches significantly above this third quartile, it may be a potential outlier.\n",
+    "\n",
+    "The distance between the upper quartile and the median is 0.6mm. \n",
     "\n",
     "#### 2.2.1.8 Max\n",
     "\n",
@@ -522,7 +528,7 @@
     "\n",
     "#### 2.2.2.2 Mean\n",
     "\n",
-    "From the output, the mean for column sepal_width is 3.05 with the range between 2.0mm to 4.4mm. \n",
+    "From the output, the mean for column sepal_width is 3.05mm with the range between 2.0mm to 4.4mm. \n",
     "\n",
     "#### 2.2.2.3 Std (Standard Deviation)\n",
     "\n",
@@ -530,11 +536,11 @@
     "\n",
     "#### 2.2.2.4 Min\n",
     "\n",
-    "The minimum value observed for sepal_width is 2.0mm\n",
+    "The minimum value observed for sepal_width is 2.0mm.\n",
     "\n",
     "#### 2.2.2.5 25% Quartile\n",
     "\n",
-    "The lower quartile for column sepal_width is 2.8.\n",
+    "The lower quartile for column sepal_width is 2.8mm, meaning 25% of the data is below 2.8mm, while the rest of the data (the highest 75%) is above 2.8mm. The distance between the lower quartile and the median is 0.7mm. \n",
     "\n",
     "#### 2.2.2.6 50% Quartile (median)\n",
     "\n",
