--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -923,7 +923,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, pandas (data loading), seaborn (statistical graphics) and matplotlib.pyplot (data visualization) libraries were imported."
+    "First, pandas (data loading), seaborn (statistical graphics) and os (interaction with operating system) libraries were imported."
    ]
   },
   {
