--- a/project.ipynb
+++ b/project.ipynb
@@ -42,10 +42,11 @@
     "\n",
     "The goal of this project is to investigate the variables and data points within the Iris flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. Four attributes ( length and width of petal of sepal) were used to morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. \n",
     "\n",
+    "The significance of each variable classification in mathematics, statistics, and Python were discussed. \n",
     "\n",
-    "The analysis done are\n",
+    "Summary statistics were also discussed at length for each variable. \n",
     "\n",
-    "Results show that \n",
+    "Violin Plots and a Count Plot were the selected as the most appropriate plot for all numerical data  and categorical data, respectvely.Results from Violin Plots show that only petal length and width for Iris setosa are identifiably much smaller than Iris versicolor and Iris virginica, while other attributes cannot significantly differentiate between Iris species. Results from Count Plot show 50 instances of each species in the dataset.\n",
     "\n",
     "This data can be used to develop Interactive Identification Keys for future botanists and researchers, as well as species determination using pattern recognition in Machine Learning."
    ]
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +243,6 @@
     "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each, without missing values. The four attributes of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) are the independent variables used to determine or identify whether an Iris flower is one of three classes (Iris setosa, I. versicolor or I. virginica). in the dependent class column.\n",
     "\n",
     "## 2.1 Classification of Variables\n",
-    "\n",
-    "> In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
     "\n",
     "### 2.1.1 Columns 'sepal_length', 'sepal_width', 'petal_length' and 'petal_width'\n",
     "\n",
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +418,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -765,12 +764,12 @@
    "source": [
     "### 2.3.2 Count Plots for Categorical Data\n",
     "\n",
-    "Count Plots were selected as the most appropriate plot for each categorical variable. This was generated using seaborn countplot (Waskom, 2012), colour-customised to pastel pallette according to GeeksforGeeks (2021b) with added edgecolor as shown in Datavizpyr (2021)."
+    "The Count Plot was selected as the most appropriate plot for the categorical variable. This was generated using seaborn countplot (Waskom, 2012), colour-customised to pastel pallette according to GeeksforGeeks (2021b) with added edgecolor as shown in Datavizpyr (2021)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +812,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.0 Conclusion"
+    "## 3.0 Conclusion\n",
+    "\n",
+    "The classification and summary statistics were discussed in depth for each variable.\n",
+    "\n",
+    "Violin Plots were the selected as the most appropriate plot for all numerical data, while a Count Plot was selected as the most appropriate plot for categorical data. Results from Violin Plots show that only petal length and width for Iris setosa are identifiably much smaller than Iris versicolor and Iris virginica, while other attributes cannot significantly differentiate between Iris species. Results from Count Plot show 50 instances of each species in the dataset."
    ]
   },
   {
