--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2060,7 +2060,9 @@
     "import pandas as pd\n",
     "import os\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -2072,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2178,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2318,7 @@
     "\n",
     "For body mass, most of the data are accumulated around the median in Adelie and Chinstrap, more so in the latter. Data is spread out and right-skewed in Gentoo.\n",
     "\n",
-    "The number of male and female are almost equal in all species in the dataset.\n"
+    "The number of male and female are almost equal in all species in the dataset, except Gentoo with slightly more males than females.\n"
    ]
   },
   {
