--- a/project.ipynb
+++ b/project.ipynb
@@ -40,13 +40,13 @@
     "\n",
     "## Abstract\n",
     "\n",
-    "The goal of this project is to investigate the variables and data points within the Iris flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. Four attributes ( length and width of petal of sepal) were used to morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. \n",
+    "The goal of this project is to investigate the variables and data points within the *Iris* flower dataset. The Iris dataset contains 5 columns and 150 rows, consisting of 3 classes species with 50 lines each, with no missing values. Four attributes (length and width of petal of sepal) were used to morphologically determine whether an Iris is one of three species: *setosa*, *versicolor* or *virginica*. \n",
     "\n",
     "The significance of each variable classification in mathematics, statistics, and Python were discussed. \n",
     "\n",
     "Summary statistics were also discussed at length for each variable. \n",
     "\n",
-    "Violin Plots and a Count Plot were the selected as the most appropriate plot for all numerical data  and categorical data, respectvely.Results from Violin Plots show that only petal length and width for Iris setosa are identifiably much smaller than Iris versicolor and Iris virginica, while other attributes cannot significantly differentiate between Iris species. Results from Count Plot show 50 instances of each species in the dataset.\n",
+    "Violin Plots and a Count Plot were the selected as the most appropriate plot for all numerical data  and categorical data, respectvely. Results from Violin Plots show that only petal length and width for Iris setosa are identifiably much smaller and can be differentiated from *Iris versicolor* and *Iris virginica*, while other attributes cannot significantly differentiate between *Iris* species. Results from Count Plot show 50 instances of each species in the dataset.\n",
     "\n",
     "This data can be used to develop Interactive Identification Keys for future botanists and researchers, as well as species determination using pattern recognition in Machine Learning."
    ]
@@ -59,7 +59,7 @@
     "\n",
     "The problem of species differentiation within the *Iris* genus has long been discussed, especially between *I. versicolor* and *I. virginica* (Anderson, 1928, 1936). Molecular studies have been done to determine chromosomal numbers of different native and introduced Iris species as early as 1934 (Randolph, 1934). \n",
     "\n",
-    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019e). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locatins from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
+    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019e). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locations from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
     "\n",
     "In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population. When coupled with phylogenetic studies which identifies the species and their closely-related species and common ancestors, it would become a powerful tool for taxonomists and researchers."
    ]
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each, without missing values. The four attributes of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) are the independent variables used to determine or identify whether an Iris flower is one of three classes (Iris setosa, I. versicolor or I. virginica). in the dependent class column.\n",
+    "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each, without missing values. The four attributes of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) are the independent variables used to determine or identify whether an Iris flower is one of three classes (*Iris setosa, I. versicolor or I. virginica*). in the dependent class column.\n",
     "\n",
     "## 2.1 Classification of Variables\n",
     "\n",
@@ -253,19 +253,19 @@
     "\n",
     "From the output, the four independent columns are 64-bit floating-point numbers. These are also known as double precision floating-point, 64-bit IEEE-754 floating-point or double (Datacadamia - Data and Co, 2019). They occupy 64 bits in computer memory which allows large numbers to be stored (Wikipedia Contributors, 2019b). They use a floating radix point, which is a symbol that separates whole numbers or integers from fractions (Wikipedia Radix point, 2023). \n",
     "\n",
-    "In mathematics, the 64-bit floating-point number represents real numbers with decimal points which provides high accuracy when performing calculations. While float64 is sufficient for most mathematical operations and storage, it has limitations in terms of accuracy due to rounding errors in infinitely large or small numbers (Beuzen, 2021). Some decimal numbers cannot be precisely represented in binary which leads to representation errors (Docs.python.org, n.d.). Higher precision formats such as 128-bit or 256-bit would remedy the problem to some extent, but even those would eventually reach their own restrictions.\n",
+    "In mathematics, the 64-bit floating-point number represents real numbers with decimal points which provides high accuracy when performing calculations. While float64 is sufficient for most mathematical operations and storage, it has limitations in terms of accuracy due to rounding errors in infinitely large or small numbers (Beuzen, 2021). Some decimal numbers cannot be precisely represented in binary which leads to representation errors (Docs.python.org, n.d.). Higher precision formats such as 128-bit or 256-bit would remedy the problem to some extent, but even those would eventually reach their own limits.\n",
     "\n",
     "In statistics, 64-bit floating-point numbers are commonly used to represent continuous numerical data such as time, measurements and price. They are highly accurate and generally sufficient for statistical analysis and hypothesis testing. However, rounding errors would still apply when using float64, a finite value, to represent extremely small or large numbers.\n",
     "\n",
     "In computing, 64-bit floating-point numbers are used to represent real numbers in computing and are more space-efficient than higher precision formats such as 128-bit or 256-bit. A 64-bit floating-point number consists of a 1-bit sign, an 11-bit exponent, and a 52-bit fraction (Wikipedia Contributors, 2019b). It adheres to the IEEE 754 standard, which ensures powerful numerical computing, consistency and interoperability across different platforms and programming languages (ETHW, 2023). \n",
     "\n",
-    "In Python, the float data type is typically implemented as a 64-bit floating-point number by default to represent real numbers. float64 provides a good balance between precision and performance in most applications, but it is not unlimited. Since many Python applications follow the IEEE 754 specification (Camperbot, 2019), such as NumPy (Numpy.org constants, n.d.), thus allowing compatibility when performing mathematical and statistical operations.\n",
+    "In Python, the float data type is typically implemented as a 64-bit floating-point number by default to represent real numbers. float64 provides a good balance between precision and performance in most applications, but it is not unlimited. Many Python applications follow the IEEE 754 specification (Camperbot, 2019), such as NumPy (Numpy.org constants, n.d.), thus allowing compatibility when performing mathematical and statistical operations.\n",
     "\n",
     "#### 2.1.1.2 Continuous Data\n",
     "\n",
-    "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range, which is different from discrete data which can only have distint values (Zangre, 2023). These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions can only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
+    "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range, which is different from discrete data which can only have distinct values (Zangre, 2023). These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions can only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
     "\n",
-    "In mathematics, continuous data is the fundamental to calculus (Wikipedia, 2020a). A real number is a number that can be used to quantify a one dimensional continuous amount (Wikipedia, 2020b). These real numbers are used as inputs in real functions (Wikipedia, 2022b), and according to Wikipedia Contributors (2019a), the general form of function is:\n",
+    "In mathematics, continuous data is fundamental to calculus (Wikipedia, 2020a). A real number is a number that can be used to quantify a one dimensional continuous amount (Wikipedia, 2020b). These real numbers are used as inputs in real functions (Wikipedia, 2022b), and according to Wikipedia Contributors (2019a), the general form of function is:\n",
     "\n",
     "![Real Function](img/realfunction.png)\n",
     "\n",
@@ -427,7 +427,7 @@
     }
    ],
    "source": [
-    "df.describe()\n",
+    "df.describe() # OR:\n",
     "\n",
     "# sepal_length_stats = df['sepal_length'].describe()\n",
     "# print(\"Sepal Length Summary Statistics:\\n\", sepal_length_stats)\n",
@@ -474,7 +474,7 @@
     "\n",
     "#### 2.2.1.3 Std (Standard Deviation)\n",
     "\n",
-    "According to Wikipedia Contributors (2019j), standard deviation is how far the data is spread around the mean, with low value indicating that data is concentrated close to the mean and high value indicating that data is spread out. The empirical rule 68–95–99.7 in a Normal distribution states that 68%, 95%, and 99.7% of the data falls within one, two and three standard deviation of the mean, respectively. The standard deviation for sepal_length is **0.83mm**, suggesting that data is clustered close to the mean.\n",
+    "According to Wikipedia Contributors (2019j), standard deviation is how far the data is spread around the mean, with low value indicating that data is concentrated close to the mean and high value indicating that data is spread out. The empirical rule 68–95–99.7 in a Normal distribution states that 68%, 95%, and 99.7% of the data fall within one, two and three standard deviation of the mean, respectively. The standard deviation for sepal_length is **0.83mm**, suggesting that data is clustered close to the mean.\n",
     "\n",
     "According to www.ncl.ac.uk (n.d.), the Sample Standard Deviation formula is:\n",
     "\n",
@@ -566,7 +566,7 @@
     "\n",
     "#### 2.2.3.2 Mean\n",
     "\n",
-    "The mean for column petal_length is **3.76mm** with big range between 1.0mm to 6.9mm. \n",
+    "The mean for column petal_length is **3.76mm** with a big range between 1.0mm to 6.9mm. \n",
     "\n",
     "#### 2.2.3.3 Std (Standard Deviation)\n",
     "\n",
@@ -616,7 +616,7 @@
     "\n",
     "##### 2.2.4.4.1 Outliers\n",
     "\n",
-    "According to Engineering Statistics Handbook (2019), outliers are observations that stand out because they are abnormally far from the rest of the data in a dataset. Outliers can potentially skew statistical analyses and key statistical calculations such as mean and standard deviation are particularly susceptible to it. Choosing the appropriate methods for outlier detection and treatment depends on the data itself and the objectives of the analysis www.linkedin.com (2023b).\n",
+    "According to Engineering Statistics Handbook (2019), outliers are observations that stand out because they are abnormally far from the rest of the data in a dataset. Outliers can potentially skew statistical analyses and key statistical calculations such as mean and standard deviation are particularly susceptible to it. Choosing the appropriate methods for outlier detection and treatment depends on the data itself and the objectives of the analysis (www.linkedin.com, 2023b).\n",
     "\n",
     "##### 2.2.4.4.2 Human Error\n",
     "\n",
@@ -630,7 +630,7 @@
     "\n",
     "#### 2.2.4.6 50% Quartile (median)\n",
     "\n",
-    "The The median for column petal_width is **1.3mm**.\n",
+    "The median for column petal_width is **1.3mm**.\n",
     "\n",
     "#### 2.2.1.7 75% Quartile\n",
     "\n",
@@ -655,7 +655,7 @@
     "\n",
     "The Violin plot is hybrid of a box plot and a kernel density plot and it compares probability distributions between two variables (Wikipedia, 2020c, Seaborn.pydata.org violinplot, n.d.). The Violin curve's width indicates frequency in each section and is computed using KDE (Yi, 2021). While the box plot only outlines the summary statistics (Carron, 2021), the Violin Plot shows both the summary statistics and each variable's density, thus offering a more detailed representation of the shape of the data.\n",
     "\n",
-    "Violin Plots with overlapping boxplots were generated for all numerical columns according to C (2021). To optimise spacing between subplots, fig.tight_layout was used according to GeeksforGeeks spacing (2020). Spacing between subplots and title (y=1.01) were adjusted according to Ceylan (2018)."
+    "Violin Plots with clearer overlapping boxplots were generated for all numerical columns according to C (2021). To optimise spacing between subplots, fig.tight_layout was used according to GeeksforGeeks spacing (2020). Spacing between subplots and title (y=1.01) were adjusted according to Ceylan (2018)."
    ]
   },
   {
@@ -694,15 +694,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Violin Plot shows that in general, petal length and width for Iris setosa are identifiably much smaller than Iris versicolor and Iris virginica, but it is not significantly different in terms of sepal attributes. Iris versicolor and virginica are not significantly different in all petal and sepal attributes. \n",
+    "The Violin Plot shows that in general, petal length and width for *I. setosa* are identifiably much smaller than *I.versicolor* and *I.virginica*, but it is not significantly different in terms of sepal attributes. *I. versicolor* and *I. virginica* are not significantly different in all petal and sepal attributes. \n",
     "\n",
-    "For sepal length, Iris setosa has a higher density of data around the median and is symmetrically distributed. Observations in Iris versicolor and virginica are more wide-spread and right-skewed.\n",
+    "For sepal length, *I. setosa* has a higher density of data around the median and is symmetrically distributed. Observations in *I. versicolor* and virginica are more wide-spread and right-skewed.\n",
     "\n",
-    "For sepal width, all three species are not significantly different from one another with higher accumulation of data around the median. Iris setosa has long tails on both lower and upper ends, suggesting a wide range. Iris versicolor is negatively-skewed and there are outliers present on the lower and upper ends of Iris virginica.\n",
+    "For sepal width, all three species are not significantly different from one another with higher accumulation of data around the median. *I. setosa* has long tails on both lower and upper ends, suggesting a wide range. *I. versicolor* is negatively-skewed and there are outliers present on the lower and upper ends of *I. virginica*.\n",
     "\n",
-    "For petal length, while it is symmetrically distributed with a big cluster of data around the median, outliers are also present on both lower and upper ends of Iris setosa. Iris versicolor and virginica data are more dispersed but slightly left-skewed.\n",
+    "For petal length, while it is symmetrically distributed with a big cluster of data around the median, outliers are also present on both lower and upper ends of *I. setosa*. *I. versicolor* and *I. virginica* data are more dispersed but slightly left-skewed.\n",
     "\n",
-    "Interestingly, for petal_width in Iris setosa, the min value is the same as the first quartile, meaning that the data distribution is relatively concentrated above this minimum value and right-skewed. Outliers are also present above the upper end. Data is more spread out in Iris versicolor and virginica and both are also positively skewed."
+    "Interestingly, for petal_width in *I. setosa*, the min value is the same as the first quartile, meaning that the data distribution is relatively concentrated above this minimum value and right-skewed. Outliers are also present above the upper end. Data is more spread out in *I. versicolor* and *I. virginica* and both are also positively skewed."
    ]
   },
   {
@@ -740,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Count plot shows there are 50 replicates/instances of each Iris species in the dataset."
+    "Count plot shows that there are 50 replicates/instances of each *Iris *species in the dataset."
    ]
   },
   {
@@ -751,7 +751,7 @@
     "\n",
     "The classification and summary statistics were discussed in depth for each variable.\n",
     "\n",
-    "Violin Plots were the selected as the most appropriate plot for all numerical data, while a Count Plot was selected as the most appropriate plot for categorical data. Results from Violin Plots show that only petal length and width for Iris setosa are identifiably much smaller than Iris versicolor and Iris virginica, while other attributes cannot significantly differentiate between Iris species. Results from Count Plot show 50 instances of each species in the dataset."
+    "Violin Plots were the selected as the most appropriate plot for all numerical data, while a Count Plot was selected as the most appropriate plot for categorical data. Results from Violin Plots show that only petal length and width for I. setosa are distinctly smaller than *I. versicolor* and *I. virginica*, while other attributes cannot significantly differentiate between the *Iris* species. Results from Count Plot show 50 instances of each species in the dataset."
    ]
   },
   {
