--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,8 +2061,8 @@
     "import os\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "#import warnings\n",
-    "#warnings.filterwarnings('ignore')"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
